RESOLVED FIXED142765
Don't pass nil as a fireDate for NSTimer
https://bugs.webkit.org/show_bug.cgi?id=142765
Summary Don't pass nil as a fireDate for NSTimer
Conrad Shultz
Reported 2015-03-16 19:15:01 PDT
WKFullScreenWindowController uses nil as the fireDate for a deferred one-shot timer. It shouldn't.
Attachments
Patch (2.78 KB, patch)
2015-03-16 19:46 PDT, Conrad Shultz
mitz: review+
Conrad Shultz
Comment 1 2015-03-16 19:15:40 PDT
Conrad Shultz
Comment 2 2015-03-16 19:46:34 PDT
mitz
Comment 3 2015-03-16 19:49:29 PDT
Comment on attachment 248784 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=248784&action=review > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:75 > +- (void)_watchdogTimerFired:(NSTimer *)timer; I don’t think this is necessary anymore. > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:678 > + ASSERT_ARG(timer, timer == _watchdogTimer); I can’t remember a single time this kind of assertion was useful.
Conrad Shultz
Comment 4 2015-03-16 19:57:31 PDT
(In reply to comment #3) > Comment on attachment 248784 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=248784&action=review > > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:75 > > +- (void)_watchdogTimerFired:(NSTimer *)timer; > > I don’t think this is necessary anymore. As of Xcode 4.3, correct. I only added it to parallel the other methods; removed. > > > Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm:678 > > + ASSERT_ARG(timer, timer == _watchdogTimer); > > I can’t remember a single time this kind of assertion was useful. Removed.
Conrad Shultz
Comment 5 2015-03-16 19:58:49 PDT
Note You need to log in before you can comment on or make changes to this bug.