Don't pass nil as a fireDate for NSTimer https://bugs.webkit.org/show_bug.cgi?id=142765

Reviewed by Dan Bernstein.

While we're here, switch to a selector that conforms to documented NSTimer API.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController cancelOperation:]):
Set the timer's fireDate as the future date matching the former interval; update the selector.
(-[WKFullScreenWindowController _watchdogTimerFired:]):
Timer callback; wrap -exitFullScreen.

Canonical link: https://commits.webkit.org/160778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181607 268f45cc-cd09-0410-ab3c-d52691b4dbfc